__defineGetter__/__defineSetter__ should throw exceptions https://bugs.webkit.org/show_bug.cgi?id=142934

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

* runtime/ObjectPrototype.cpp:
(JSC::objectProtoFuncDefineGetter):
(JSC::objectProtoFuncDefineSetter):
Throw exceptions when these functions are used directly.

LayoutTests:

* js/property-getters-and-setters-expected.txt:
* js/script-tests/property-getters-and-setters.js:

Canonical link: https://commits.webkit.org/160996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181868 268f45cc-cd09-0410-ab3c-d52691b4dbfc